--- a/OOPlab6/OOPlab6.csproj
+++ b/OOPlab6/OOPlab6.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ACommand.cs" />
     <Compile Include="AShape.cs" />
     <Compile Include="CSegment.cs" />
     <Compile Include="Form1.cs">
