--- a/OOPlab6/OOPlab6.csproj
+++ b/OOPlab6/OOPlab6.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AShape.cs" />
     <Compile Include="CCircle.cs" />
     <Compile Include="CDoublyLinkedList.cs" />
+    <Compile Include="CGroup.cs" />
     <Compile Include="CSegment.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
