--- a/OOPlab6/OOPlab6.csproj
+++ b/OOPlab6/OOPlab6.csproj
@@ -49,9 +49,10 @@
     <Compile Include="ACommand.cs" />
     <Compile Include="AShape.cs" />
     <Compile Include="CCircle.cs" />
-    <Compile Include="CDoublyLinkedList.cs" />
+    <Compile Include="DoublyLinkedList.cs" />
     <Compile Include="CGroup.cs" />
     <Compile Include="CSegment.cs" />
+    <Compile Include="ShapeList.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
